# Web_Scraping_FastAPI_PostgreSQL

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml
db/: connect.py
migrations/: env.py
migrations/versions/: 507af5495209_init.py  ad7c9a170a51_add_created_by_field.py
src/: get_meteo_data.py  models.py  service_config.py
src/repository/: meteo.py
src/router/: meteo.py
src/schemas/: meteo.py
src/spiders/: baryshivka_meteo.json  get_meteo_baryshivka.py  get_meteo_odesa.py  get_meteo_rivne.py  odesa_meteo.json  rivne_meteo.json
